--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 const data = cell.getRow().getData();
                                 const url = data.url_diff;
                                 if(url){
-                                    return `<a href="${url}" target="_blank">${value}</a>`
+                                    return `<a href="${url}" target="_blank">$Value</a>`
                                 }
                                 return value;
                             },
