--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                                 return value;
                             },
                         },
+                        { title: "Comment", field: "comment", minWidth: 100, headerSort:false, resizable: false, formatter: "html"},
                         { title: "Original Title", field: "original_title", minWidth: 10000, headerSort:false, resizable: false},
                         { title: "BPM Ratio", field: "bpm_ratio", minWidth: 10000, headerSort:false, resizable: false},
-                        { title: "Comment", field: "html_comment", minWidth: 10000, headerSort:false, resizable: false, formatter: "html"},
                     ],
                     responsiveLayoutCollapseFormatter:function(data){
                         //data - an array of objects containing the column title and value for each cell
