--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 return value;
                             },
                         },
-                        { title: "Difficulty", field: "url", minWidth: 100, headerSort:false, resizable: false,
+                        { title: "Difficulty", field: "url",  width:30, minWidth: 30, headerSort:false, resizable: false,
                             formatter: function(cell, formatterParams, onRendered) {
                                 cell.getElement().style.whiteSpace = "pre-wrap";
                                 const value = cell.getValue();
