--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 return value;
                             },
                         },
-                        { title: "Difficulty", field: "url",  width:120, minWidth: 120, headerSort:false, resizable: false,
+                        { title: "Difficulty", field: "url",  width:100, minWidth: 100, headerSort:false, resizable: false,
                             formatter: function(cell, formatterParams, onRendered) {
                                 cell.getElement().style.whiteSpace = "pre-wrap";
                                 const value = cell.getValue();
@@ -116,7 +116,7 @@
                                 return value;
                             },
                         },
-                        { title: "Comment", field: "comment", minWidth: 200, headerSort:false, resizable: true, formatter: "html"},
+                        { title: "Comment", field: "comment", width:400, minWidth: 400, headerSort:false, resizable: true, formatter: "html"},
                         { title: "Original Title", field: "original_title", minWidth: 10000, headerSort:false, resizable: false},
                         { title: "BPM Ratio", field: "bpm_ratio", minWidth: 10000, headerSort:false, resizable: false},
                     ],
