--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 return value;
                             },
                         },
-                        { title: "Comment", field: "comment", width:400, minWidth: 400, headerSort:false, resizable: true, formatter: "html"},
+                        { title: "Comment", field: "comment", width:400, minWidth: 400, headerSort:false, resizable: false, formatter: "html"},
                         { title: "Original Title", field: "original_title", minWidth: 10000, headerSort:false, resizable: false},
                         { title: "BPM Ratio", field: "bpm_ratio", minWidth: 10000, headerSort:false, resizable: false},
                     ],
