--- a/24insane.html
+++ b/24insane.html
@@ -83,7 +83,7 @@
                                 return a - b;
                             },
                         },
-                        { title: "Name", field: "title", minWidth: 1, headerSort:false, resizable: false, variableHeight:true,
+                        { title: "Name", field: "title", minWidth: 1, headerSort:true, resizable: false, variableHeight:true,
                             formatter: function(cell, formatterParams, onRendered) {
                                 cell.getElement().style.whiteSpace = "pre-wrap";
                                 const value = cell.getValue();
@@ -104,21 +104,29 @@
                                 return value;
                             },
                         },
-                        { title: "Difficulty", field: "name_diff", minWidth: 100, headerSort:false, resizable: false,
+                        { title: "Difficulty", field: "url",  width:100, minWidth: 100, headerSort:false, resizable: false,
                             formatter: function(cell, formatterParams, onRendered) {
                                 cell.getElement().style.whiteSpace = "pre-wrap";
                                 const value = cell.getValue();
                                 const data = cell.getRow().getData();
                                 const url = data.url_diff;
                                 if(url){
-                                    return `<a href="${url}" target="_blank">${value}</a>`
+                                    return `<a href="${url}" target="_blank">Download</a>`
                                 }
+                                return value;
+                            },
+                        },
+                        { title: "Comment", field: "comment", width:400, minWidth: 400, headerSort:false, resizable: false, 
+                          formatter: function(cell, formatterParams, onRendered) {
+                                cell.getElement().style.whiteSpace = "pre-wrap";
+                                const value = cell.getValue();
+                                const data = cell.getRow().getData();
+                                const url = data.url_diff;
                                 return value;
                             },
                         },
                         { title: "Original Title", field: "original_title", minWidth: 10000, headerSort:false, resizable: false},
                         { title: "BPM Ratio", field: "bpm_ratio", minWidth: 10000, headerSort:false, resizable: false},
-                        { title: "Comment", field: "html_comment", minWidth: 10000, headerSort:false, resizable: false, formatter: "html"},
                     ],
                     responsiveLayoutCollapseFormatter:function(data){
                         //data - an array of objects containing the column title and value for each cell
