--- a/24insane.html
+++ b/24insane.html
@@ -180,7 +180,7 @@
                     });
                 });
             };
-            request.open("get", "header.json", true);
+            request.open("get", "insane-header.json", true);
             request.setRequestHeader('Pragma', 'no-cache');
             request.setRequestHeader('Cache-Control', 'no-cache');
             request.setRequestHeader('If-Modified-Since', 'Thu, 01 Jun 1970 00:00:00 GMT')
