--- a/24insane.html
+++ b/24insane.html
@@ -160,9 +160,9 @@
                     }
                 });
 
-                table.setData("./data.json").catch(function(error){
+                table.setData("./insane-data.json").catch(function(error){
                     let requestData = new XMLHttpRequest();
-                    requestData.open("get", "data.json", true);
+                    requestData.open("get", "insane-data.json", true);
                     requestData.onload = objsData => {
                         table.setData(JSON.parse(requestData.responseText));
                     }
