--- a/24insane.html
+++ b/24insane.html
@@ -89,7 +89,7 @@
                                 const value = cell.getValue();
                                 const data = cell.getRow().getData();
                                 const md5 = data.md5;
-                                return `<a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsmd5=${md5}" target="_blank">${value}</a>`
+                                return value;
                             },
                         },
                         { title: "Artist", field: "artist", minWidth: 100, headerSort:false, resizable: false,
