--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
         <div class="container">
             <div id="table" class="table-sm table-bordered"></div>
         </div>
+        <style>
+            body {
+                background-image: url('https://actionette.github.io/24ktable/test.png');
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+            }
+        </style>
     </body>
 
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.2.4/dist/js/tabulator.min.js" ></script>
