--- a/24insane.html
+++ b/24insane.html
@@ -37,7 +37,14 @@
         <div class="container">
             <div id="table" class="table-sm table-bordered"></div>
         </div>
-    </body>
+        <style>
+            body {
+                background-image: url('https://actionette.github.io/24ktable/test.png');
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+            }
+        </style>
 
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.2.4/dist/js/tabulator.min.js" ></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
