--- a/index.html
+++ b/index.html
@@ -45,6 +45,27 @@
                 background-size: cover;
             }
         </style>
+		<header>
+		<h1><a href="https://actionette.github.io/24ktable/index.html">24K Tables</a></h1>
+		<script language="javascript" type="text/javascript">
+		<!--menu("../");//
+		-->
+		</script>
+		<nav>
+			<ul>
+				<li><a href="https://actionette.github.io/24ktable/index.html">24K Normal</a>
+					<ul>
+						<li><a href="https://excln.github.io/table24k/table.html">Exclusion Table</a></li>
+						<li><a href="">Submit Vote Request</a></li>
+						<li><a href="https://www.dropbox.com/sh/bd0nuctv0je6hwi/AAAYXReWIjssla9OzlIe2EZVa?dl=0">actionette's 24k Dropbox</a></li>
+						<li><a href="">24K段位認定</a></li>
+					</ul>
+				</ul>
+			<ul>
+        <li><a href="https://actionette.github.io/24ktable/24insane.html">24K Insane</a> </li>
+		</ul>
+    </nav>
+</header>
     </body>
 
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.2.4/dist/js/tabulator.min.js" ></script>
