--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <style>
             body {
-                background-image: url('https://actionette.github.io/24ktable/test.png');
+                background-image: url('https://actionette.github.io/24ktable/24N/int1.png');
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;
