--- a/24N/24Normal.html
+++ b/24N/24Normal.html
@@ -3,11 +3,11 @@
 <html lang="ja">
     <head>
         <title>24k Normal</title>
-        <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
+        <meta name="bmstable" content="https://actionette.github.io/24N/header.json" />
 
-        <link rel="stylesheet" href="https://actionette.github.io/24ktable/current/bootstrap.min.css">
+        <link rel="stylesheet" href="https://actionette.github.io/24ktable/24N/resource/bootstrap.min.css">
         <!-- Tabulator -->
-        <link href="https://actionette.github.io/24ktable/current/tabulator_bootstrap4.min.css" rel="stylesheet" />
+        <link href="https://actionette.github.io/24ktable/24N/resource/tabulator_bootstrap4.min.css" rel="stylesheet" />
         <style>
             .btn-circle {
                 width: 70px;
@@ -42,7 +42,7 @@
 		</script>
 		<nav>
 			<ul>
-				<li><a href="https://actionette.github.io/24ktable/index.html">24K Normal</a>
+				<li><a href="https://actionette.github.io/24ktable/24N/24Normal.html">24K Normal</a>
 					<ul>
 						<li><a href="https://excln.github.io/table24k/table.html">Exclusion Table</a></li>
 						<li><a href="">Submit Vote Request</a></li>
