--- a/24N/24Normal.html
+++ b/24N/24Normal.html
@@ -3,7 +3,7 @@
 <html lang="ja">
     <head>
         <title>24k Normal</title>
-        <meta name="bmstable" content="https://actionette.github.io/24N/header.json" />
+        <meta name="bmstable" content="https://actionette.github.io/24ktable/24N/header.json" />
 
         <link rel="stylesheet" href="https://actionette.github.io/24ktable/24N/resource/bootstrap.min.css">
         <!-- Tabulator -->
