--- a/24I/24Insane.html
+++ b/24I/24Insane.html
@@ -39,7 +39,7 @@
         </div>
         <style>
             body {
-                background-image: url('https://actionette.github.io/24ktable/insane.png');
+                background-image: url('https://actionette.github.io/24ktable/24I/insane.png');
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;
