--- a/24I/24Insane.html
+++ b/24I/24Insane.html
@@ -167,7 +167,7 @@
                     }
                 });
 
-                table.setData("./insane-data.json").catch(function(error){
+                table.setData("./data.json").catch(function(error){
                     let requestData = new XMLHttpRequest();
                     requestData.open("get", "data.json", true);
                     requestData.onload = objsData => {
