--- a/24N/24Normal.html
+++ b/24N/24Normal.html
@@ -51,7 +51,7 @@
 					</ul>
 				</ul>
 			<ul>
-        <li><a href="https://actionette.github.io/24ktable/24insane.html">24K Insane</a> </li>
+        <li><a href="https://actionette.github.io/24ktable/24I/24Insane.html">24K Insane</a> </li>
 		</ul>
     </nav>
 	</header>
