--- a/24I/24Insane.html
+++ b/24I/24Insane.html
@@ -34,6 +34,27 @@
         <meta http-equiv="Expires" content="0">
     </head>
     <body>
+        <header>
+		<h1><a href="https://actionette.github.io/24ktable/index.html">24K Tables</a></h1>
+		<script language="javascript" type="text/javascript">
+		<!--menu("../");//
+		-->
+		</script>
+		<nav>
+			<ul>
+				<li><a href="https://actionette.github.io/24ktable/24N/24Normal.html">24K Normal</a>
+					<ul>
+						<li><a href="https://excln.github.io/table24k/table.html">Exclusion Table</a></li>
+						<li><a href="">Submit Vote Request</a></li>
+						<li><a href="https://www.dropbox.com/sh/bd0nuctv0je6hwi/AAAYXReWIjssla9OzlIe2EZVa?dl=0">actionette's 24k Dropbox</a></li>
+						<li><a href="">24K段位認定</a></li>
+					</ul>
+				</ul>
+			<ul>
+        <li><a href="https://actionette.github.io/24ktable/24I/24Insane.html">24K Insane</a> </li>
+		</ul>
+    </nav>
+	</header>
         <div class="container">
             <div id="table" class="table-sm table-bordered"></div>
         </div>
