Update and rename index.html to sandbox.html

--- a/DevSide/sandbox.html
+++ b/DevSide/sandbox.html
@@ -2,12 +2,12 @@
 
 <html lang="ja">
     <head>
-        <title>24k Normal</title>
-        <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
+        <title>24k Sandbox</title>
+        <meta name="bmstable" content="https://actionette.github.io/24ktable/DevSide/header.json" />
 
-        <link rel="stylesheet" href="https://actionette.github.io/24ktable/current/bootstrap.min.css">
+        <link rel="stylesheet" href="https://actionette.github.io/24ktable/DevSide/resource/bootstrap.min.css">
         <!-- Tabulator -->
-        <link href="https://actionette.github.io/24ktable/current/tabulator_bootstrap4.min.css" rel="stylesheet" />
+        <link href="https://actionette.github.io/24ktable/DevSide/resource/tabulator_bootstrap4.min.css" rel="stylesheet" />
         <style>
             .btn-circle {
                 width: 70px;
