--- a/DevSide/sandbox.html
+++ b/DevSide/sandbox.html
@@ -102,7 +102,7 @@
                     },
                     columns: [
                         {formatter:"responsiveCollapse", field:"collapse", width:30, minWidth:30, align:"center", resizable:false, headerSort:false},
-                        { title: "Level", field: "level", width: 100, resizable: false,
+                        { title: "NTR", field: "ntr", width: 100, resizable: false,
                             formatter: function(cell, formatterParams, onRendered) {
                                 return header.symbol + cell.getValue();
                             },
